fix styling and add dark mode function

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 body {
   margin: 0;
+  font-family: Inter, sans-serif;
+  height: 100vh;
+  background-color: #282D35;
 }
 
 .container {
@@ -23,7 +26,7 @@ nav {
   align-items: center;
   background-color: #ffffff;
   padding: 30px 25px;
-  height: 60px;
+  height: 110px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
@@ -33,17 +36,20 @@ nav.dark {
 }
 
 .nav-logo_icon {
-  width: 30px;
-  margin-right: 10px;
+  height: 40px;
+  margin-right: 7px;
 }
 
 .nav-logo_text {
-  color: #61DAFB;
   margin-right: auto;
+  color: #61DAFB;
+  font-weight: 700;
+  font-size: 30px;
 }
 
 .nav-title {
   color: #DEEBF8;
+  font-weight: 600;
 }
 
 .toggler {
@@ -52,13 +58,13 @@ nav.dark {
 }
 
 .toggler p {
-  font-size: 0.625rem;
+  font-size: 15px;
   font-weight: 600;
 }
 
 .toggler-slider {
-  width: 25px;
-  height: 13px;
+  width: 45px;
+  height: 25px;
   background-color: #2B283A;
   border-radius: 2rem;
   margin-inline: 7px;
@@ -76,8 +82,8 @@ nav.dark .toggler-slider {
 }
 
 .toggler-slider-circle {
-  height: 13px;
-  width: 13px;
+  height: 22px;
+  width: 22px;
   background-color: white;
   border-radius: 50%;
 }
@@ -108,38 +114,40 @@ nav.dark .toggler-slider {
 
 /* MAIN styles */
 main {
-  padding: 57px 27px;
-  background-image: url("./images/react-icon-light.png"); 
+  padding: 70px 40px;
+  background-image: url("/images/react-icon-light.png"); 
+  background-size: 180px;
   background-repeat: no-repeat;
-  background-position: right center;
+  background-position: right 25%;
   flex: 1 1 auto;
   background-color: white;
   color: #2B283A;
 }
 
 main.dark {
-  background-image: url("./images/react-icon-dark.png"); 
+  background-image: url("/images/react-icon-dark.png"); 
   background-color: #282D35;
   color: white;    
 }
 
-.main--title {
+.main-title {
   margin: 0;
-  font-size: 39px;
+  font-size: 50px;
   letter-spacing: -0.05em;
 }
 
-.main--facts {
+.main-facts {
   margin-top: 46px;
-  max-width: 400px;
+  max-width: 420px;
 }
 
-.main--facts > li {
-  line-height: 19px;
+.main-facts > li {
+  line-height: 30px;
   padding-block: 10px;
+  font-size: 20px;
 }
 
-.main--facts > li::marker {
-  font-size: 1.4rem;
+.main-facts > li::marker {
+  font-size: 28px;
   color: #61DAFB;
 }
